# policy_loom

./: .gitignore  .pre-commit-config.yaml  LICENSE  PI05_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.github/: copilot-instructions.md
configs/: README.md  diffusion_minimal.yaml  diffusion_policy_example.yaml  pi05_example.yaml  pi05_lora.yaml  pi05_minimal.yaml  preprocess_mcap_to_openpi.yaml  preprocess_mp4_to_openpi.yaml
docs/: BUGFIXES.md  PI05_CONFIG_GUIDE.md  PI05_SETUP.md  PI05_SIMPLE_TRAINING.md  PI05_TRAINING.md  PI05_TRAINING_GUIDE.md  SYNCHRONIZATION.md  TESTING_GUIDE.md  design_ingest_preprocess.md  quickstart_openpi.md
scripts/: analyze_sync.py  convert_mp4_mcap_to_lerobot.py  inspect_mcap.py  process_run19.py  process_run19_synced.py  test_diffusion_env.sh  test_diffusion_policy_preprocessing.py  test_pi05_env.sh  test_smolvla_preprocessing.py  train_diffusion_eval_t10.py  train_pi05.py  verify_pi05_installation.py  verify_sync.py
src/loom/: __init__.py  cli.py
src/loom/core/: __init__.py  data.md  ports.md  ports.py  types.py
src/loom/export/: __init__.py
src/loom/export/openpi/: LAYOUT.md  MAPPING.md  SCHEMA.md  __init__.py
src/loom/io/: CATALOG.md  __init__.py  synchronized.py
src/loom/io/lerobot/: __init__.py  converter.py  loader.py  pi05.py  writer.py
src/loom/io/mcap/: README.md  __init__.py  reader.py
src/loom/io/mp4/: README.md  __init__.py  reader.py
src/loom/observability/: LOGGING.md  MANIFEST.md  __init__.py
src/loom/pipeline/: BATCHING.md  PREPROCESS_FLOW.md  __init__.py  merge.py
src/loom/preprocessing/: __init__.py  base.py  config.py  diffusion_policy.py  smolvla.py  utils.py
src/loom/runners/: PREPROCESS_OPENPI.md  __init__.py
src/loom/training/: __init__.py  adapter.py  checkpoint.py  config.py  logger.py  metrics.py  trainer.py
src/loom/training/adapters/: __init__.py  diffusion_policy.py  pi05.py
src/loom/training/transforms/: __init__.py  openpi_transform.py
src/loom/transforms/: CATALOG.md  __init__.py
src/loom/transforms/time/: README.md  __init__.py
src/loom/transforms/vision/: README.md  __init__.py
src/loom/write/: EPISODE_LAYOUT.md  TABLES.md  __init__.py
src/policy_loom/: __init__.py
src/policy_loom/adapters/: __init__.py
src/policy_loom/domain/: __init__.py
src/policy_loom/services/: __init__.py
tests/: README.md  __init__.py  test_core.py  test_io.py  test_pipeline.py  test_sync.py  test_synchronized.py
tests/cli/: test_cli.py
tests/integration/: test_pi05_pipeline.py
tests/io/: test_lerobot_converter.py  test_lerobot_pi05.py  test_lerobot_writer.py
tests/preprocessing/: __init__.py  conftest.py  test_diffusion_policy.py  test_smolvla.py
tests/training/: test_adapter.py  test_checkpoint.py  test_config.py  test_logger.py  test_metrics.py  test_trainer.py
tests/training/adapters/: test_diffusion_policy.py  test_pi05_adapter.py
tests/training/integration/: __init__.py  test_end_to_end.py
tests/training/transforms/: __init__.py  test_openpi_transform.py
