[project]
name = "policy-loom"
version = "0.1.0"
description = "Open-source toolkit for building, preprocessing, and training Vision-Language-Action (VLA) models"
readme = "README.md"
authors = [
    { name = "Gourav", email = "gkshindia@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "mcap>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
# DiffusionPolicy training dependencies
diffusion = [
    "diffusers>=0.11.1",
    "wandb>=0.13.3",
    "accelerate>=0.13.2",
    "einops>=0.6.0",
    "datasets>=2.0.0",  # For loading LeRobot format datasets
]

# Pi0.5 model training (Physical Intelligence VLA - latest)
# Install in separate venv: uv sync --extra pi05
pi05 = [
    "lerobot>=0.1.0",
    "datasets>=4.0.0,<4.2.0",
    "einops>=0.6.0",
    "wandb>=0.13.3",
    "accelerate>=0.13.2",
    "torchvision>=0.21.0,<0.23.0",
    "diffusers>=0.27.2,<0.36.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi",
]

# Development dependencies
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

# All optional features (excluding pi05 due to conflicts)
all = [
    "policy-loom[diffusion]",
]

[project.scripts]
loom = "loom.cli:app"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=loom --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
