[project]
name = "policy-loom"
version = "0.1.0"
description = "Open-source toolkit for building, preprocessing, and training Vision-Language-Action (VLA) models"
readme = "README.md"
authors = [
    { name = "Gourav", email = "gkshindia@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "mcap>=1.0.0",
    "mcap-ros2-support>=0.5.5",
    "torch>=2.0.0",
    "transformers==4.53.2",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "lerobot",
    "datasets>=2.0.0",
    "av>=15.1.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
# DiffusionPolicy training dependencies
diffusion = [
    "diffusers>=0.11.1",
    "wandb>=0.13.3",
    "accelerate>=0.13.2",
    "einops>=0.6.0",
    "datasets>=2.0.0",  # For loading LeRobot format datasets
]

# Pi0.5 (Physical Intelligence) model training dependencies
# WARNING: Cannot coexist with diffusion extra due to transformers version conflicts
# Create separate virtualenv: python -m venv venv-pi05 && source venv-pi05/bin/activate
# Then run: GIT_LFS_SKIP_SMUDGE=1 uv sync --extra pi05
pi05 = [
    "openpi",  # Physical Intelligence Pi0.5 model (from GitHub)
    "torch==2.7.1",  # Exact version from OpenPI
    "transformers==4.53.2",  # Exact version - required for AdaRMS patches
    "sentencepiece>=0.2.0",  # Tokenizer support
    "jaxtyping==0.2.36",  # Type annotations for arrays
    "beartype==0.19.0",  # Runtime type checking
    "filelock>=3.16.1",  # File locking for model caching
    "rich>=14.0.0",  # Terminal formatting
    "fsspec[gcs]>=2024.6.0",  # File system abstractions
    "imageio>=2.36.1",  # Image I/O
    "einops>=0.8.0",  # Tensor operations
    "wandb>=0.19.1",  # Experiment tracking
    "safetensors>=0.4.0",  # Safe tensor storage
]

# Development dependencies
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

# All optional features (mutually exclusive groups)
all = [
    "policy-loom[diffusion,dev]",
]

[project.scripts]
loom = "loom.cli:app"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true  # Don't fail on missing external library stubs
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ""

[tool.uv.sources]
# OpenPI from Physical Intelligence GitHub repo (for pi05 extra)
# Note: This will only be installed when using --extra pi05
openpi = { git = "https://github.com/physical-intelligence/openpi", rev = "main" }

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
